--- a/frontend/src/pages/Chat/style.css
+++ b/frontend/src/pages/Chat/style.css
@@ -2,36 +2,102 @@
     border-bottom: 1px inset rgb(238, 238, 238);
     padding: 20px;
 }
+.navBar nav{
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+}
+
+.navBar .logo{
+    margin-right: auto;
+}
+
+.navBar button{
+    background-color: rgb(252, 145, 145);
+    width: 100px;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.navBar button:hover{
+    background-color: rgb(241, 182, 182);
+}
 
 .navBar li{
     list-style: none;
 }
 
-/*Components*/
-.components{
+/*Chat Room*/
+#chatRoom{
+    margin: 20px;
+    height: 80vh;
+    position: relative;
+    overflow: hidden;
 }
 
-.myMessage{
+#chatRoom .title{
     display: flex;
     align-items: center;
-    background-color: rgb(164, 178, 245);
-    border-radius: 10px;
-    max-width: fit-content;
-    max-height: fit-content;
-    height: 50px;
+    justify-content: center;
+    margin: 15px;
 }
 
-.inputText input[type = "text"]{
-    border-radius: 10px;
-    border: 1px inset rgb(151, 151, 151);
-}
-
-#chatRoom{
-    display: flex;
-    padding: 20px;
-    margin: 80px auto 0;
-    box-shadow: 2px 2px 2px 2px rgb(206, 206, 206);
+#chatRoom #messageSpace{
     height: 500px;
-    width: 800px;
+    overflow: auto;
 }
 
+#chatRoom #messageSpace .author{
+    border-radius: 30px;
+    height: 40px;
+    width: 40px;
+}
+
+#chatRoom .myMessage, .otherMessage {
+    display: flex;
+    align-items: center;
+    margin: 15px;
+}
+
+#chatRoom .message{
+    max-width: fit-content;
+    background-color: rgb(199, 195, 255);
+    border-radius: 5px;
+    padding: 10px;
+    margin: 5px;
+}
+
+
+#chatRoom .otherMessage .message {
+    background-color: rgb(223, 255, 214);
+}
+
+#chatRoom #sendMessage{
+    position: absolute;
+    bottom: 0;
+    border: 1px solid rgb(218, 218, 218);
+    padding: 10px;
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto;
+    width: 80vw;
+}
+
+
+#chatRoom #sendMessage input, button{
+   border: none;
+}
+
+#chatRoom #sendMessage input{
+    width: 60%;
+}
+
+#chatRoom #sendMessage button{
+    width: 100px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgb(220, 255, 210);
+    cursor: pointer;
+ }
